[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leak-test-sim"
version = "0.1.0"
description = "Physically-correct pressure-decay and flow leak-test simulator (pressure decay, temperature compensation, Gage R&R)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Eric Rosenfeld" }]
keywords = ["leak-test", "pressure-decay", "metrology", "quality", "gage-rr", "vacuum"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Manufacturing",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7.0", "matplotlib>=3.5"]

[tool.setuptools.packages.find]
include = ["leak_test_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
